reset wiremock stubs